# random-penguin-facts

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  penguin.js  penguin.wasm  setup_env.sh
.github/workflow/: test_runner.yml
backend/: CMakeLists.txt  build.sh  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/coverage/lcov-report/: index.html
backend/coverage/lcov-report/tests/js_tests/utils/: index.html  wasm.utils.js.html
backend/libs/: CMakeLists.txt
backend/libs/animals/: CMakeLists.txt  animals.h
backend/libs/cat/: CMakeLists.txt  cats.h
backend/libs/datastructures/: CMakeLists.txt  datastructures.h
backend/libs/landmarks/: CMakeLists.txt  landmarks.h
backend/libs/penguin/: CMakeLists.txt  penguins.cpp
backend/src/app/: CMakeLists.txt  main.cpp
backend/tests/: tests.test.ts
backend/tests/js_tests/cat/: cat.test.ts
backend/tests/js_tests/datastructures/: datastructures.test.ts
backend/tests/js_tests/landmarks/: landmark.test.ts
backend/tests/js_tests/landmarks/__snapshots__/: landmark.test.ts.snap
backend/tests/js_tests/penguin/: penguin.test.ts
backend/tests/js_tests/utils/: wasm.utils.js
frontend/: vite.config.ts
frontend/penguins/: penguin_app_threadless.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Penguins.ts
frontend/src/utils/: penguin_app.cjs  (+3 more)
libs/: CMakeLists.txt
libs/cat/: cats.cpp
libs/penguin/: CMakeLists.txt  penguins.cpp  penguins.h
src/app/: CMakeLists.txt  main.cpp
(+6 files in other folders)
